--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 6969",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^3.15.2",
+    "@simplewebauthn/browser": "^5.2.1",
+    "@simplewebauthn/server": "^5.2.1",
     "next": "12.1.6",
+    "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,6 +23,7 @@
     "@types/react-dom": "18.0.5",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
+    "prisma": "^3.15.2",
     "typescript": "4.7.4"
   }
 }
