--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@prisma/client": "^3.15.2",
     "@simplewebauthn/browser": "^5.2.1",
     "@simplewebauthn/server": "^5.2.1",
+    "jquery": "^3.6.0",
     "next": "12.1.6",
     "next-transpile-modules": "^9.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-events-listeners": "^1.0.1",
+    "react-native-event-listeners": "^1.0.7",
+    "react-native-listener-provider": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
