--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "strict": false
+    "strict": true
   },
   "include": [
     "next-env.d.ts",
@@ -25,6 +25,6 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "*"
+    "node_modules"
   ]
 }
