--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/lab": "^5.0.0-alpha.87",
+    "@mui/material": "^5.8.5",
     "@prisma/client": "^3.15.2",
     "@simplewebauthn/browser": "^5.2.1",
     "@simplewebauthn/server": "^5.2.1",
+    "iron-session": "^6.1.3",
     "jquery": "^3.6.0",
     "next": "12.1.6",
     "next-transpile-modules": "^9.0.0",
